--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
 name = "epaste"
-version = "1.0.0"
+version = "1.0.2"
 authors = ["Zetok Zalbavar <zetok@openmailbox.org>"]
+description = "Tool to easily encrypt & encode encrypted data as base64."
+repository = "https://github.com/zetok/epaste"
+readme = "README.md"
+keywords = ["security", "encryption", "base64", "pastebin", "paste"]
+license = "GPL-3.0+"
+license-file = "COPYING"
+exclude = ["build-static.sh"]
 
 [dependencies]
 rustc-serialize = "0.3"
